force-app/main/default/objects/DeployResult__c/DeployResult__c.object-meta.xml
<CustomObject>
    <label>Deploy Result</label>
    <nameField>
        <displayFormat>DER-{000000}</displayFormat>
        <label>Deploy ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deploy Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>