force-app/main/default/objects/DeployResult__c/fields/AllowMissingFiles__c.field-meta.xml
<CustomField>
    <fullName>AllowMissingFiles__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow Missing Files</description>
    <label>Allow Missing Files</label>
    <type>Checkbox</type>
</CustomField>