force-app/main/default/objects/DeployResult__c/fields/AutoUpdatePackage__c.field-meta.xml
<CustomField>
    <fullName>AutoUpdatePackage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether managed packages were allowed to be auto-updated during deployment.</description>
    <label>Auto-Update Package</label>
    <type>Checkbox</type>
</CustomField>