force-app/main/default/objects/DeployResult__c/fields/CanceledBy__c.field-meta.xml
<CustomField>
    <fullName>CanceledBy__c</fullName>
    <description>ID of the user who canceled the deployment.</description>
    <label>Canceled By</label>
    <length>18</length>
    <type>Text</type>
</CustomField>