force-app/main/default/objects/DeployResult__c/fields/CanceledByName__c.field-meta.xml
<CustomField>
    <fullName>CanceledByName__c</fullName>
    <description>Name of the user who canceled the deployment.</description>
    <label>Canceled By Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>