force-app/main/default/objects/DeployResult__c/fields/ChangeSetName__c.field-meta.xml
<CustomField>
    <fullName>ChangeSetName__c</fullName>
    <description>Change Set Name</description>
    <label>Change Set Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>