force-app/main/default/objects/DeployResult__c/fields/CheckOnly__c.field-meta.xml
<CustomField>
    <fullName>CheckOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, this was a validation-only deployment.</description>
    <label>Check Only</label>
    <type>Checkbox</type>
</CustomField>