force-app/main/default/objects/DeployResult__c/fields/CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>CompletedDate__c</fullName>
    <description>Timestamp when the deployment process completed.</description>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>