force-app/main/default/objects/DeployResult__c/fields/CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy__c</fullName>
    <description>ID of the user who created the deployment.</description>
    <label>Created By</label>
    <length>18</length>
    <type>Text</type>
</CustomField>