force-app/main/default/objects/DeployResult__c/fields/CreatedByName__c.field-meta.xml
<CustomField>
    <fullName>CreatedByName__c</fullName>
    <description>Name of the user who created the deployment.</description>
    <label>Created By Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>