force-app/main/default/objects/DeployResult__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <description>Timestamp when the deployment request was created.</description>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>