force-app/main/default/objects/DeployResult__c/fields/DeploymentStatus__c.field-meta.xml
<CustomField>
    <fullName>DeploymentStatus__c</fullName>
    <description>See Salesforce Deployment Status</description>
    <formula>HYPERLINK(
  LEFT($Api.Partner_Server_URL_560, FIND(&quot;/services&quot;, $Api.Partner_Server_URL_560) - 1) &amp;
  &quot;/lightning/setup/DeployStatus/page?address=/changemgmt/monitorDeploymentsDetails.apexp?asyncId=&quot; &amp;
  SUBSTITUTE(
    SUBSTITUTE(
      SUBSTITUTE(Id__c, &quot;+&quot;, &quot;%2B&quot;),
      &quot;&amp;&quot;, &quot;%26&quot;
    ),
    &quot;=&quot;, &quot;%3D&quot;
  ) &amp;
  &quot;&amp;retURL=/changemgmt/monitorDeployment.apexp&quot;,
   Id__c ,
  &quot;_blank&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deployment Status</label>
    <type>Text</type>
</CustomField>