force-app/main/default/objects/DeployResult__c/fields/Done__c.field-meta.xml
<CustomField>
    <fullName>Done__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the deployment is finished.</description>
    <label>Done</label>
    <type>Checkbox</type>
</CustomField>