force-app/main/default/objects/DeployResult__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Error message returned if the deployment failed.</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>