force-app/main/default/objects/DeployResult__c/fields/ErrorStatusCode__c.field-meta.xml
<CustomField>
    <fullName>ErrorStatusCode__c</fullName>
    <description>Error code returned if the deployment failed.</description>
    <label>Error Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>