force-app/main/default/objects/DeployResult__c/fields/ExecutionTime__c.field-meta.xml
<CustomField>
    <fullName>ExecutionTime__c</fullName>
    <description>Deployment Duration</description>
    <formula>IF(
  AND(
    NOT(ISBLANK(CompletedDate__c)),
    NOT(ISBLANK(StartDate__c))
  ),
  TEXT(FLOOR((CompletedDate__c - StartDate__c) * 24)) &amp; &quot;:&quot; &amp;
  LPAD(TEXT(FLOOR(MOD((CompletedDate__c - StartDate__c) * 1440, 60))), 2, &quot;0&quot;) &amp; &quot;:&quot; &amp;
  LPAD(TEXT(FLOOR(MOD((CompletedDate__c - StartDate__c) * 86400, 60))), 2, &quot;0&quot;),
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Execution Time</label>
    <type>Text</type>
</CustomField>