force-app/main/default/objects/DeployResult__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Deployment Id</description>
    <externalId>true</externalId>
    <label>Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>