force-app/main/default/objects/DeployResult__c/fields/IgnoreWarnings__c.field-meta.xml
<CustomField>
    <fullName>IgnoreWarnings__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether warnings should be ignored during the deployment.</description>
    <label>Ignore Warnings</label>
    <type>Checkbox</type>
</CustomField>