force-app/main/default/objects/DeployResult__c/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <description>The last time the deployment request was modified.</description>
    <label>Last Modified Date</label>
    <type>DateTime</type>
</CustomField>