force-app/main/default/objects/DeployResult__c/fields/NumberComponentErrors__c.field-meta.xml
<CustomField>
    <fullName>NumberComponentErrors__c</fullName>
    <description>Number of components that failed during deployment.</description>
    <label>Errors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>