force-app/main/default/objects/DeployResult__c/fields/NumberComponentsDeployed__c.field-meta.xml
<CustomField>
    <fullName>NumberComponentsDeployed__c</fullName>
    <description>Number of components deployed successfully.</description>
    <label>Deployed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>