force-app/main/default/objects/DeployResult__c/fields/NumberComponentsTotal__c.field-meta.xml
<CustomField>
    <fullName>NumberComponentsTotal__c</fullName>
    <description>Total number of components included in the deployment.</description>
    <label>Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>