force-app/main/default/objects/DeployResult__c/fields/NumberComponentsTotalReal__c.field-meta.xml
<CustomField>
    <fullName>NumberComponentsTotalReal__c</fullName>
    <description>Number of non-duplicate components</description>
    <label>Total (No duplicates)</label>
    <summaryForeignKey>DeployResultComponent__c.DeployResult__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>