force-app/main/default/objects/DeployResult__c/fields/NumberTestErrors__c.field-meta.xml
<CustomField>
    <fullName>NumberTestErrors__c</fullName>
    <description>Number of failed tests.</description>
    <label>Test Errors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>