force-app/main/default/objects/DeployResult__c/fields/NumberTestsCompleted__c.field-meta.xml
<CustomField>
    <fullName>NumberTestsCompleted__c</fullName>
    <description>Number of tests that were executed during the deployment.</description>
    <label>Tests Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>