force-app/main/default/objects/DeployResult__c/fields/NumberTestsTotal__c.field-meta.xml
<CustomField>
    <fullName>NumberTestsTotal__c</fullName>
    <description>Total number of tests expected to run during the deployment.</description>
    <label>Tests Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>