force-app/main/default/objects/DeployResult__c/fields/NumberTestsTotalReal__c.field-meta.xml
<CustomField>
    <fullName>NumberTestsTotalReal__c</fullName>
    <description>Number of non-duplicate tests</description>
    <label>Tests Total (No duplicates)</label>
    <summaryForeignKey>DeployResultTest__c.DeployResult__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>