force-app/main/default/objects/DeployResult__c/fields/PurgeOnDelete__c.field-meta.xml
<CustomField>
    <fullName>PurgeOnDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether deleted components should be permanently removed (purged) during deployment.</description>
    <label>Purge On Delete</label>
    <type>Checkbox</type>
</CustomField>