force-app/main/default/objects/DeployResult__c/fields/RollbackOnError__c.field-meta.xml
<CustomField>
    <fullName>RollbackOnError__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, the deployment rolls back all changes if an error occurs.</description>
    <label>Rollback On Error</label>
    <type>Checkbox</type>
</CustomField>