force-app/main/default/objects/DeployResult__c/fields/RunTestsEnabled__c.field-meta.xml
<CustomField>
    <fullName>RunTestsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether tests were enabled during the deployment.</description>
    <label>Run Tests Enabled</label>
    <type>Checkbox</type>
</CustomField>