force-app/main/default/objects/DeployResult__c/fields/SinglePackage__c.field-meta.xml
<CustomField>
    <fullName>SinglePackage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the deployment is treated as a single package, meaning all components are part of one package directory.</description>
    <label>Single Package</label>
    <type>Checkbox</type>
</CustomField>