force-app/main/default/objects/DeployResult__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Timestamp marking the start of the deployment process.</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>