force-app/main/default/objects/DeployResult__c/fields/StateDetail__c.field-meta.xml
<CustomField>
    <fullName>StateDetail__c</fullName>
    <description>Detailed internal state of the deployment.</description>
    <label>State Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>