force-app/main/default/objects/DeployResult__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The overall status of the deployment request (e.g., Succeeded, Failed).</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Canceled</fullName>
                <label>⛔ Canceled</label>
            </value>
            <value>
                <fullName>Failed</fullName>
                <label>❌ Failed</label>
            </value>
            <value>
                <fullName>Succeeded</fullName>
                <label>✅ Succeeded</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <label>⏳ Pending</label>
            </value>
            <value>
                <fullName>InProgress</fullName>
                <label>🔄 In Progress</label>
            </value>
            <value>
                <fullName>SucceededPartial</fullName>
                <label>🟡 Succeeded Partial</label>
            </value>
            <value>
                <fullName>Canceling</fullName>
                <label>⚠️ Canceling</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>