force-app/main/default/objects/DeployResult__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the deployment as a whole was successful.</description>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>