force-app/main/default/objects/DeployResult__c/fields/TestLevel__c.field-meta.xml
<CustomField>
    <fullName>TestLevel__c</fullName>
    <description>Level of test execution: NoTestRun, RunSpecifiedTests, RunLocalTests, or RunAllTestsInOrg.</description>
    <label>Test Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NoTestRun</fullName>
            </value>
            <value>
                <fullName>RunSpecifiedTests</fullName>
            </value>
            <value>
                <fullName>RunLocalTests</fullName>
            </value>
            <value>
                <fullName>RunAllTestsInOrg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>