force-app/main/default/objects/DeployResult__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Changeset</fullName>
                <label>Change Set</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>