force-app/main/default/objects/DeployResult__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>StartDate__c</columns>
    <columns>CompletedDate__c</columns>
    <columns>ExecutionTime__c</columns>
    <columns>CheckOnly__c</columns>
    <columns>NumberComponentsTotal__c</columns>
    <columns>NumberComponentsDeployed__c</columns>
    <columns>NumberComponentErrors__c</columns>
    <columns>NumberTestsTotal__c</columns>
    <columns>NumberTestErrors__c</columns>
    <columns>ErrorMessage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>