force-app/main/default/objects/DeployResult__c/listViews/DeployCanceled.listView-meta.xml
<ListView>
    <fullName>DeployCanceled</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>StartDate__c</columns>
    <columns>CompletedDate__c</columns>
    <columns>ExecutionTime__c</columns>
    <columns>CheckOnly__c</columns>
    <columns>NumberComponentsTotal__c</columns>
    <columns>CanceledByName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Canceled</value>
    </filters>
    <label>Canceled</label>
</ListView>