force-app/main/default/objects/DeployResult__c/listViews/DeployFailed.listView-meta.xml
<ListView>
    <fullName>DeployFailed</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>StartDate__c</columns>
    <columns>CompletedDate__c</columns>
    <columns>ExecutionTime__c</columns>
    <columns>CheckOnly__c</columns>
    <columns>NumberComponentsTotal__c</columns>
    <columns>NumberComponentsDeployed__c</columns>
    <columns>NumberComponentErrors__c</columns>
    <columns>ErrorMessage__c</columns>
    <columns>ErrorStatusCode__c</columns>
    <columns>CreatedByName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <label>Failed</label>
</ListView>