force-app/main/default/objects/DeployResult__c/listViews/DeploySucceeded.listView-meta.xml
<ListView>
    <fullName>DeploySucceeded</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>StartDate__c</columns>
    <columns>CompletedDate__c</columns>
    <columns>ExecutionTime__c</columns>
    <columns>CheckOnly__c</columns>
    <columns>NumberComponentsTotal__c</columns>
    <columns>NumberComponentsDeployed__c</columns>
    <columns>NumberTestsTotal__c</columns>
    <columns>TestLevel__c</columns>
    <columns>CreatedByName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Succeeded,SucceededPartial</value>
    </filters>
    <label>Succeeded</label>
</ListView>