force-app/main/default/objects/DeployResult__c/listViews/Last7Days.listView-meta.xml
<ListView>
    <fullName>Last7Days</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>StartDate__c</columns>
    <columns>CompletedDate__c</columns>
    <columns>ExecutionTime__c</columns>
    <columns>CheckOnly__c</columns>
    <columns>NumberComponentsTotal__c</columns>
    <columns>NumberComponentsDeployed__c</columns>
    <columns>NumberComponentErrors__c</columns>
    <columns>NumberTestsTotal__c</columns>
    <columns>NumberTestErrors__c</columns>
    <columns>ErrorMessage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CompletedDate__c</field>
        <operation>equals</operation>
        <value>LAST_WEEK</value>
    </filters>
    <label>Last 7 days</label>
</ListView>